Build arrow link component

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
     --color-primary: #FF8787;
     --color-secondary: #e5ebb2;
-    --color-accent: #BCE29E;
+    --color-accent: #8D72E1;
     --color-headings: #1b0760;
     --color-body: #918CA4;
 }
@@ -15,6 +15,9 @@ body {
     line-height: 1.5;
     font-size: 2.4rem;
 }
+
+
+/* Typography */ 
 
 h1, h2, h3 {
     color: var(--color-headings);
@@ -35,4 +38,40 @@ h3 {
 
 p {
     margin-top: 0;
+}
+
+
+@media screen and (min-width: 1024px) {
+    body {
+        font-size: 1.8rem;
+    }
+
+    h1 {
+        font-size: 8rem;
+    }
+}
+
+/* Links */
+.link-arrow {
+    color: var(--color-accent) ;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after {
+    content: "-->";
+    margin-left: 5px;
+    transform-origin: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+    margin-left: 10px;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .link-arrow {
+        font-size: 1.5rem;
+    }
 }
