--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,23 @@ p {
         padding-left: 0;
     }
 }
+
+/*Icons*/
+.icon {
+    width: 40px;
+    height: 40px;
+}
+
+.icon--primary {
+    fill: var(--color-primary);
+}
+
+.icon-container {
+    width: 64px;
+    height: 64px;
+    background: #f3f9fa;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
