--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,16 @@
     --color-body: #918CA4;
 }
 
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
 }
+
 body {
     font-family: Inter, Arial, Helvetica, sans-serif;
     color: var(--color-body);
@@ -155,4 +162,66 @@ p {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 2rem 3rem;
+    border: 0;
+    border-radius: 40px;
+    white-space: nowrap;
+    cursor: pointer;
+    text-align: center;
+    margin: 1rem 0;
+}
+
+.btn--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.btn--primary:hover {
+    background: #f30000;
+    color: #fff;
+}
+
+.btn--secondary {
+    background: var(--color-secondary);
+}
+
+.btn--secondary:hover {
+    background: #d8f000;
+}
+
+.btn--accent {
+    background: var(--color-accent);
+    color: #fff;
+}
+
+.btn--accent:hover {
+    background: #3e00fa;
+}
+
+.btn--block {
+    width: 100%;
+    display: inline-block;
+}
+
+.btn--outline {
+    background: #fff;
+    color: var(--color-headings);
+    border: 2px solid var(--color-headings);
+}
+
+.btn--outline:hover {
+    background:var(--color-headings);
+    color: #fff;
+}
+
+@media screen and (min-width:1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
