--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --color-headings: #1b0760;
     --color-body: #918CA4;
     --color-border: #CCC;
+    --color-body-darker:#5c5577;
 }
 
 *,
@@ -30,6 +31,7 @@ body {
 h1, h2, h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
+    line-height: 1.1;
 }
 
 h1 {
@@ -151,8 +153,17 @@ p {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
+}
+
+.icon--white {
+    fill: white;
 }
 
 .icon-container {
@@ -165,6 +176,12 @@ p {
     align-items: center;
 }
 
+.icon-container-accent  {
+    background-color: var(--color-accent);
+}
+
+/** Buttons **/
+
 .btn {
     font-size: 1.8rem;
     font-weight: 600;
@@ -176,6 +193,7 @@ p {
     cursor: pointer;
     text-align: center;
     margin: 1rem 0;
+    text-decoration: none;
 }
 
 .btn--primary {
@@ -219,6 +237,11 @@ p {
 .btn--outline:hover {
     background:var(--color-headings);
     color: #fff;
+}
+
+.btn--stretched {
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 
 @media screen and (min-width:1024px) {
@@ -289,3 +312,361 @@ p {
     color: #fff;
 }
 
+/** PLANS **/
+.plan__name {
+    color: #fff;
+    font-weight: 500;
+    margin: 0;
+    font-size: 2.4rem;
+}
+
+.plan__price {
+    font-size: 6rem;
+}
+
+.plan__billing-cycle {
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin-right: 1rem;
+}
+
+.plan__description {
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+}
+
+.plan .list-item {
+    margin-bottom: 2rem;
+}
+
+.plan--popular .card__header  {
+    position: relative;
+}
+
+.plan--popular .card__header::before {
+    content: url(../images/popular.svg);
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    top :0;
+    right: 5%;
+}
+
+.media {
+    display: flex;
+}
+
+.media__title {
+    margin-top: 0;
+}
+
+.media__body {
+    margin: 0 2rem;
+}
+
+.media__image 
+{
+    margin-top: 1rem;
+}
+
+/* QUOTES */
+
+.quote {
+    font-size: 3rem;
+    font-style: italic;
+    color: var(--color-body-darker);
+    line-height: 1.3;
+}
+
+.quote__text::before {
+    content: open-quote;
+}
+
+.quote__text::after {
+    content: close-quote;
+}
+
+.quote__author {
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 0;
+}
+
+.quote__organization {
+    color: var(--color-headings);
+    opacity: 0.4;
+    font-size: 2rem;
+    font-style: normal;
+}
+
+.quote__line {
+    position: relative;
+    bottom: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+    .quote{
+        font-size: 2rem;
+    }
+
+    .quote__author{
+        font-size: 2.4rem;
+    }
+
+    .quote__organization{
+        font-size: 1.6rem;
+    }
+}
+
+/** GRIDS **/
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px){
+    .grid--1x2 {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media screen and (min-width: 768px){
+    .grid--1x3 {
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+/* TESTIMONIAL IMAGES */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial_image > img{
+    width: 100%;
+}
+
+.testimonial_image {
+    position: relative;
+}
+
+.testimonial_image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width:768px) {
+    .testimonial .quote,
+    .testimonial .quote__author {
+        font: size 2.4rem;
+    }
+
+    .testimonial .quote {
+        margin-left: 6rem;
+    }
+
+}
+
+/** CALL OUTS **/
+.callout {
+    padding: 4rem;
+    border-radius: 5px;
+}
+
+.callout--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.callout__heading {
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.callout .btn {
+    justify-self: center;
+    align-self: center;
+}
+
+.callout__content {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .callout .grid--lx2 {
+        grid-template-columns: 1fr auto;
+    }
+
+    .callout__content {
+        text-align: left;
+    }
+
+    .callout .btn {
+        justify-self: center;
+        margin: 0 2rem;
+    }
+}
+
+/* COLLAPSIBLES */
+.collapsible__header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.collapsible__heading {
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.collapsible__chevron {
+    transform: rotate(-90deg);
+    transition: transform 0.3s;
+}
+
+.collapsible__content {
+    display: none;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+
+}
+
+.collapsible--expanded .collapsible__chevron{ 
+    transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+    display: block;
+    max-height: 100vh;
+    transition: max-height 1s;
+    opacity: 1;
+}
+
+/** BLOCKS */
+.block {
+    --padding-vertical: 6rem;
+    padding: var(--padding-vertical) 2rem;
+    border: 2px solid tomato;
+}
+
+.block__heading {
+    margin-top: 0;
+}
+
+.block--dark {
+    background: #000;
+    color: #7b858b;
+}
+
+.block--dark .block__heading {
+    color: #fff;
+}
+
+.block--skewed-right {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+}
+
+.block--skewed-left {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+}
+
+.block__header {
+    text-align: center;
+}
+
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/** NAVBAR  **/
+.nav {
+    background: #000;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 1rem;
+    align-items: center;
+}
+
+.nav__list {
+    width: 100%;
+    margin: 0;
+}
+
+.nav__item {
+    padding: 0.5rem 2rem;
+    border-bottom: 1px solid #222;
+}
+
+.nav__item > a {
+    color: #d2d0db;
+    transition: color .3s;
+    text-decoration: none;
+}
+
+.nav__item > a:hover{
+    color: #fff;
+}
+
+.nav__toggler {
+   opacity: 0.5; 
+   transition: box-shadow .15s;
+   cursor: pointer;
+}
+
+.nav.collapsible--expanded .nav__toggler{
+    opacity: 1;
+    box-shadow: 0 0 0 3px #666; 
+    border-radius: 5px;
+}
+
+.nav__brand {
+    transform: translateY(5px);
+}
+
+@media screen and (min-width:768px) {
+    .nav__toggler {
+        display: none;
+    }
+
+    .nav__list {
+        width: auto;
+        display: flex;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+    }
+
+    .nav__item {
+        border: 0;
+    }
+}
+
+.hero__tagline {
+    font-size: 2rem;
+    color: #b9c3cf ;
+    letter-spacing: 1px;
+    margin: 2rem 0 5rem;
+}
+
+.hero__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .hero__content {
+        text-align: left;
+        align-self: center;
+    }
+
+    .hero {
+        padding-top: 0;
+    }
+}
