Putting it all together

--- a/components/lists.html
+++ b/components/lists.html
@@ -1,5 +1,6 @@
 <ul class="list list--tick">
-    <li class="list__item">Item 1</li>
-    <li class="list__item">Item 2</li>
-    <li class="list__item">Item 3</li>
+    <li><a href="https://www.godaddy.com/en-in">Godaddy</a></li>
+                <li><a href="https://www.domain.com/">Domain.com</a></li>
+                <li><a href="https://instantdomainsearch.com/">Instant Domain Search</a></li>
 </ul>
+
